Rework download script - no corrupted files should be there after downloading

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,15 @@ seaborn
 matplotlib
 pandas
 pyfonts
+retry
 
 ### RAG ###
+langchain_community
 langchain_core
 langchain_openai
 langchain_huggingface
 langchain_chroma
 streamlit
 chainlit
+pypdf
+pypdf2
