--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,27 @@
     ],
     "flake8.args": [
         "--max-line-length",
-        "120"
+        "120",
+        "--ignore",
+        "E402, E302, E305, W293, E303, F405, E203"
     ],
     "[python]": {
         "editor.tabSize": 4,
         "editor.rulers": [
             120
-        ]
+        ],
+        "editor.formatOnSave": false,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "never"
+        }
     },
+    // On Linux select this
+    // "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    // On Windows select this
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python",
+    "python.envFile": "${workspaceFolder}/.env",
+    "python.terminal.activateEnvInCurrentTerminal": true,
+    "python.terminal.activateEnvironment": true,
     // Files to exclude in the explorer
     "files.exclude": {
         "**/.git": false,
@@ -55,18 +68,18 @@
         "files.trimTrailingWhitespace": false
     },
     // Change font
-    "editor.fontFamily": "Geist Mono",
-    "scm.inputFontFamily": "Geist Mono",
-    "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
-    "chat.editor.fontFamily": "Geist Mono",
-    "debug.console.fontFamily": "Geist Mono",
-    "editor.codeLensFontFamily": "Geist Mono",
-    "notebook.output.fontFamily": "Geist Mono",
-    "markdown.preview.fontFamily": "Geist Mono",
-    "editor.inlayHints.fontFamily": "Geist Mono",
+    "editor.fontFamily": "Fire Code",
+    "scm.inputFontFamily": "Fire Code",
+    "terminal.integrated.fontFamily": "MesloLGM Nerd Font",
+    "chat.editor.fontFamily": "Fire Code",
+    "debug.console.fontFamily": "Fire Code",
+    "editor.codeLensFontFamily": "Fire Code",
+    "notebook.output.fontFamily": "Fire Code",
+    "markdown.preview.fontFamily": "Fire Code",
+    "editor.inlayHints.fontFamily": "Fire Code",
     // Theme
     "workbench.colorTheme": "Dracula Refined",
-    "workbench.iconTheme": "catppuccin-mocha",
+    "workbench.iconTheme": "moxer-icons",
     // Font size
     "editor.fontSize": 14,
     "terminal.integrated.fontSize": 14,
