--- a/src/test_sub/pyproject.toml
+++ b/src/test_sub/pyproject.toml
@@ -7,14 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-langchain-core = "^0.3.2"
-langfuse = "^2.50.2"
-langchain-openai = "^0.2.0"
-ragas = "<0.1.20"
-datasets = "^3.0.0"
-chromadb = "^0.5.7"
-langchain = "<0.3"
-sentence-transformers = "^3.1.1"
+langchain-core = ">=0.2.38"
+langchain-community = "<0.3"
+langchain = "0.2.16"
+langchain-openai = "<0.2"
+langchain-huggingface = "<0.1"
+bs4 = "^0.0.2"
+faiss-cpu = "^1.8.0.post1"
+seaborn = "^0.13.2"
+ragas = "^0.1.20"
+langchain-qdrant = "^0.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
