--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipykernel = "^6.29.5"
 pyarrow = "^17.0.0"
 plotly = "^5.24.0"
 nbformat = "^5.10.4"
+streamlit-agraph = "^0.0.45"
 
 
 [build-system]
